samples/_failures_safe/1761423883_ef1bb4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4af27cd9.c: In function ‘main’:
./samples/SAFE/__tmp_4af27cd9.c:175:5: error: expected ‘,’ or ‘;’ at end of input
  175 |     for (size_t i = 0
      |     ^~~
./samples/SAFE/__tmp_4af27cd9.c:175:5: error: expected declaration or statement at end of input
